# ODataAgent

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
odataagent/: __init__.py  errors.py  metadata.py  paginator.py  query.py  service.py
tests/: test_odata.py
