[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odataagent"
version = "0.3.0"
description = "Turn any OData service into AI-queryable tools — auto-schema discovery, query building, pagination."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Naveen Kumar Baskaran"}]
keywords = ["odata", "sap", "llm", "agent", "tools", "api"]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
